comments addressed 2